# aos-platform

./: .env.example  .gitignore  README.md  download_images.py  gen_aos_full_pptx.py  gen_aos_test_slide.py  gen_palantir_article_pptx.py  generate_topic.py  rename_remaining.py  reorder_sidebar.py  scrape_aip_docs.py  update_220w.py
services/aos-api/: pyproject.toml
services/aos-api/aos_api/: __init__.py  account_link.py  action_enhancements.py  action_finale.py  action_further.py  action_params.py  action_rules.py  action_template_registry.py  action_visual_editor.py  action_webhook.py  af_action_types.py  af_action_types_router.py  af_archetypes_toggle.py  af_archetypes_toggle_router.py  af_capabilities.py  af_capabilities_router.py  af_edit_counter.py  af_edit_counter_router.py  af_edited_marker.py  af_edited_marker_router.py  af_oma_editor.py  af_oma_editor_router.py  af_param_help.py  af_param_help_router.py  agent_health_migration_webhook.py  aip_alerts.py  aip_alerts_router.py  aip_analyst_chart.py  aip_analyst_chart_router.py  aip_analyst_explore.py  aip_analyst_explore_router.py  aip_app_state.py  aip_app_state_router.py  aip_assist.py  aip_assist_context.py  aip_assist_context_router.py  aip_assist_perms.py  aip_assist_perms_router.py  aip_debug_cot.py  aip_debug_cot_router.py  (+801 more)
services/aos-api/tests/: conftest.py  test_action_enhancements.py  test_action_finale.py  test_action_further.py  test_action_params.py  test_action_plugins_99.py  test_action_rules.py  test_action_visual_editor.py  test_action_webhook.py  test_actions.py  test_actions_execute.py  (+555 more)
(+466 files in other folders)
