[project]
name = "aos-api"
version = "0.2.0"
description = "AOS API contract surface (Wave-0)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.0",
  "psycopg[binary]>=3.2",
  "pymysql>=1.1.0",
  "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "cryptography>=42.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aos_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
